VM1/firewall/iptables.rules
# Generated by iptables-save v1.4.12 on Thu Mar 17 22:52:47 2016
*nat
:PREROUTING ACCEPT [8271:629972]
:INPUT ACCEPT [2720:251730]
:OUTPUT ACCEPT [8308:547615]
:POSTROUTING ACCEPT [13652:905651]
COMMIT
# Completed on Thu Mar 17 22:52:47 2016
# Generated by iptables-save v1.4.12 on Thu Mar 17 22:52:47 2016
*filter
:INPUT DROP [1054:39496]
:FORWARD ACCEPT [11256:782622]
:OUTPUT ACCEPT [30527:23171514]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.8.0.2/32 -p icmp -j ACCEPT
-A INPUT -s 172.31.212.0/24 -j ACCEPT
-A INPUT -s 130.237.0.0/16 -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A FORWARD -i tun0 -j ACCEPT
-A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Thu Mar 17 22:52:47 2016
